# walk_app

./: .gitignore  LICENSE  README.md  check_package_deps.py  environment.yml  make.bat  pyproject.toml  setup.py  test.json
eda_code/: create_grid_testing.py  fetch_testing.py
src/: env.yml
walk_app/: __init__.py
walk_app/access/: walkability_functions.py
walk_app/backend/: __init__.py  gtfs.py  mobilityDatabaseAPI.py
walk_app/data/: __init__.py  ref_data.py
walk_app/helpers/: __init__.py  spatial_helpers.py
walk_app/ref/: api_keys.py
